--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,5 +36,18 @@
         android:layout_centerVertical="true"
         android:rotation="-90"
         android:visibility="invisible" />
+
+    <Button
+        android:id="@+id/settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="90dp"
+        android:height="50dp"
+        android:minWidth="10dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        app:icon="@android:drawable/ic_menu_manage" />
 
 </RelativeLayout>
